--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,7 +109,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -626,6 +625,7 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
+allow 193.218.118.133;
 allow 193.218.118.181;
 allow 193.218.118.182;
 allow 193.218.118.188;
@@ -799,7 +799,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -931,7 +930,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
-allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
 allow 23.94.211.25;
@@ -959,7 +957,6 @@ allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:148f::1;
 allow 2602:fc24:18:1be9::1;
 allow 2602:fc24:18:1c54::1;
 allow 2602:fc24:19:95b7::1;
@@ -1480,6 +1477,7 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
+allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
@@ -1505,7 +1503,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.196.143.7;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1651,6 +1648,7 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.91.76.103;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1686,7 +1684,6 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.158;
 allow 82.153.138.120;
-allow 82.153.138.153;
 allow 82.153.138.182;
 allow 82.153.138.48;
 allow 82.153.138.79;
@@ -1731,7 +1728,6 @@ allow 89.147.110.202;
 allow 89.147.110.214;
 allow 89.147.111.124;
 allow 89.147.111.87;
-allow 89.163.155.136;
 allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.234.157.254;
@@ -1793,6 +1789,7 @@ allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
 allow 94.177.106.37;
+allow 94.177.106.46;
 allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
