--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -133,7 +133,6 @@ allow 144.172.73.11;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
-allow 146.59.234.220;
 allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.164.210;
@@ -267,7 +266,6 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
-allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.174.136.114;
 allow 185.181.60.135;
@@ -511,6 +509,7 @@ allow 185.243.218.46;
 allow 185.243.218.61;
 allow 185.243.218.89;
 allow 185.243.218.95;
+allow 185.243.23.81;
 allow 185.244.192.175;
 allow 185.244.192.184;
 allow 185.246.128.161;
@@ -821,7 +820,6 @@ allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
 allow 205.185.121.170;
-allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 206.237.98.52;
@@ -927,7 +925,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.184.48.127;
 allow 23.184.48.128;
 allow 23.94.211.25;
@@ -946,7 +943,6 @@ allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:96f9::1;
@@ -1454,6 +1450,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:97c0:3e3:493::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
@@ -1497,9 +1494,9 @@ allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
-allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.192.44.250;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1517,6 +1514,7 @@ allow 45.128.232.151;
 allow 45.130.20.250;
 allow 45.131.108.215;
 allow 45.132.246.245;
+allow 45.133.74.203;
 allow 45.134.225.36;
 allow 45.135.132.20;
 allow 45.138.16.107;
@@ -1610,9 +1608,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.202.38.49;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
