--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,6 +1,5 @@
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
-deny 2001:1b60:3:220:3039:101:0:1;
 deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
 deny 2001:1b60:3:239:1003:103:0:1;
@@ -90,14 +89,19 @@ deny 2001:67c:6ec:203:192:42:116:219;
 deny 2001:67c:6ec:203:192:42:116:220;
 deny 2001:67c:6ec:203:192:42:116:221;
 deny 2001:67c:6ec:203:218:33ff:fe44:5513;
+deny 2001:67c:6ec:203:218:33ff:fe44:5514;
 deny 2001:67c:6ec:203:218:33ff:fe44:5515;
 deny 2001:67c:6ec:203:218:33ff:fe44:5517;
 deny 2001:67c:6ec:203:218:33ff:fe44:5518;
+deny 2001:67c:6ec:203:218:33ff:fe44:5519;
 deny 2001:67c:6ec:203:218:33ff:fe44:5520;
+deny 2001:67c:6ec:203:218:33ff:fe44:5522;
+deny 2001:67c:6ec:203:218:33ff:fe44:5523;
 deny 2001:67c:6ec:203:218:33ff:fe44:5524;
 deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
+deny 2001:67c:6ec:203:218:33ff:fe44:5528;
 deny 2001:67c:89c:666::1;
 deny 2001:67c:89c:702:1ce:1ce:babe:1;
 deny 2001:67c:89c:702:1ce:1ce:babe:10;
@@ -112,6 +116,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -404,18 +409,10 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
-deny 2a05:b0c7:67b0::1;
-deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6841::1;
 deny 2a05:b0c7:6949::1;
-deny 2a05:b0c7:696c::1;
-deny 2a05:b0c7:6978::1;
-deny 2a05:b0c7:6b6c::1;
-deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6c28::1;
-deny 2a05:b0c7:6cd8::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
@@ -629,7 +626,6 @@ deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0e:97c0:3e3:493::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
