--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -689,6 +689,7 @@ allow 199.195.253.247;
 allow 199.249.230.120;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
+allow 2001:1b60:3:220:3039:101:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
@@ -1111,6 +1112,7 @@ allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -1237,8 +1239,15 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:67b0::1;
+allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6841::1;
 allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:696c::1;
+allow 2a05:b0c7:6978::1;
+allow 2a05:b0c7:6b6c::1;
+allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1497,6 +1506,7 @@ allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
+allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
 allow 35.0.127.52;
@@ -1507,12 +1517,14 @@ allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.63;
+allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.220.242.40;
+allow 44.221.12.235;
 allow 45.12.3.80;
+allow 45.128.232.151;
 allow 45.130.20.250;
 allow 45.131.108.215;
 allow 45.132.246.245;
@@ -1583,6 +1595,7 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
+allow 46.41.150.103;
 allow 47.243.103.140;
 allow 47.243.74.136;
 allow 50.3.182.133;
@@ -1610,6 +1623,7 @@ allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1669,7 +1683,6 @@ allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
-allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1705,6 +1718,7 @@ allow 85.215.76.62;
 allow 85.93.218.204;
 allow 86.104.194.13;
 allow 87.118.110.27;
+allow 87.118.114.44;
 allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
@@ -1767,7 +1781,13 @@ allow 93.99.104.128;
 allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.102.51.15;
+allow 94.103.124.101;
+allow 94.103.124.104;
+allow 94.103.124.107;
+allow 94.103.124.121;
 allow 94.103.124.90;
+allow 94.103.124.91;
+allow 94.103.124.98;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
@@ -1786,7 +1806,6 @@ allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
-allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
