--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,5 +1,6 @@
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
+deny 2001:1b60:3:220:3039:101:0:1;
 deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
 deny 2001:1b60:3:239:1003:103:0:1;
@@ -283,6 +284,7 @@ deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:d680::;
+deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3f::c0cc:80;
 deny 2a00:1728:f:f:f:f:c03c:9898;
@@ -409,8 +411,15 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
+deny 2a05:b0c7:67b0::1;
+deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6841::1;
 deny 2a05:b0c7:6949::1;
+deny 2a05:b0c7:696c::1;
+deny 2a05:b0c7:6978::1;
+deny 2a05:b0c7:6b6c::1;
+deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6c28::1;
 deny 2a06:1280:bee1:2::ee12:230;
